--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_music",
+  "name": "netease-cloud-music",
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.6.5",
     "axios": "^0.21.1",
+    "cross-env": "^7.0.3",
     "immutable": "3",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
@@ -25,6 +26,9 @@
   },
   "scripts": {
     "start": "craco start",
+    "start:beta": "cross-env REACT_APP_RELEASE_PROJECT_ENV=beta REACT_APP_RELEASE_PROJECT_NAME=netease-cloud-music craco start",
+    "start:preview": "cross-env REACT_APP_RELEASE_PROJECT_ENV=preview REACT_APP_RELEASE_PROJECT_NAME=netease-cloud-music craco start",
+    "start:prod": "cross-env REACT_APP_RELEASE_PROJECT_ENV=prod REACT_APP_RELEASE_PROJECT_NAME=netease-cloud-music craco start",
     "build": "craco build",
     "test": "craco test",
     "eject": "craco eject"
@@ -45,7 +49,6 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-import": "^1.13.3",
     "craco": "^0.0.3",
     "craco-less": "^1.18.0"
   }
