--- a/package.json
+++ b/package.json
@@ -3,6 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
+  "scripts": {
+    "build": "craco build",
+    "copy": "node ./handleGiteeJenkins.js",
+    "eject": "craco eject",
+    "start": "craco start",
+    "start:beta": "cross-env REACT_APP_RELEASE_PROJECT_ENV=beta REACT_APP_RELEASE_PROJECT_NAME=netease-cloud-music craco start",
+    "start:preview": "cross-env REACT_APP_RELEASE_PROJECT_ENV=preview REACT_APP_RELEASE_PROJECT_NAME=netease-cloud-music craco start",
+    "start:prod": "cross-env REACT_APP_RELEASE_PROJECT_ENV=prod REACT_APP_RELEASE_PROJECT_NAME=netease-cloud-music craco start",
+    "test": "craco test"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -23,30 +48,6 @@
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0"
-  },
-  "scripts": {
-    "start": "craco start",
-    "start:beta": "cross-env REACT_APP_RELEASE_PROJECT_ENV=beta REACT_APP_RELEASE_PROJECT_NAME=netease-cloud-music craco start",
-    "start:preview": "cross-env REACT_APP_RELEASE_PROJECT_ENV=preview REACT_APP_RELEASE_PROJECT_NAME=netease-cloud-music craco start",
-    "start:prod": "cross-env REACT_APP_RELEASE_PROJECT_ENV=prod REACT_APP_RELEASE_PROJECT_NAME=netease-cloud-music craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "craco eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   },
   "devDependencies": {
     "craco": "^0.0.3",
